--- a/.github/workflows/build-test-report.yml
+++ b/.github/workflows/build-test-report.yml
@@ -1,29 +1,27 @@
 name: CI
 
 on:
-  # Triggers the workflow on push or pull request events but only for the "master" branch
   push:
     branches: [ "master" ]
   pull_request:
     branches: [ "master" ]
-
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
-  
+
 jobs:
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Lint with Gradle
+        run: ./gradlew lintTaskNameHere
 
   build:
     runs-on: ubuntu-latest
+    needs: lint
     steps:
-    
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
-
-       # Runs the Gradle build task, but without running the JUnit tests
       - name: Run the Gradle Build
         run: ./gradlew build -x test
-        
-      # Builds a 'fat' jar file with the dependencies from Gradle
       - name: Archive Jar with Dependencies
         uses: actions/upload-artifact@v2
         with:
@@ -34,24 +32,16 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
-    
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it   
       - uses: actions/checkout@v2
- 
-      # Runs the Gradle test task
       - name: Test with Gradle
         run: ./gradlew test --tests "*"
-        
-      # Builds a zip file with JUnit test report in it    
       - name: Archive test report
         uses: actions/upload-artifact@v2
         with:
           name: Test report
           path: build/reports/tests/test
-             
-      # Builds a zip file with JUnit code coveage report in it    
       - name: Archive coverage report
         uses: actions/upload-artifact@v2
         with:
           name: Code Coverage report
-          path: build/reports/jacoco/test/html         
+          path: build/reports/jacoco/test/html
