--- a/.github/workflows/build-test-report.yml
+++ b/.github/workflows/build-test-report.yml
@@ -11,9 +11,10 @@ jobs:
   lint:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - name: Lint with Gradle
-        run: ./gradlew lintTaskNameHere
+    - uses: actions/checkout@v2
+    - name: Lint with KtLint
+      run: ./gradlew ktlintCheck
+
 
   build:
     runs-on: ubuntu-latest
